# inkdav

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: test.yml
app/: Dockerfile  caldav_client.py  cli.py  config.py  example_events.json  pyproject.toml  renderer.py  renderer_weasy.py  scheduling.py  server.py
app/scripts/: generate_logo.py
app/templates/: admin.html  calendar_weasy.html  debug.html
app/tests/: test_cli.py  test_renderer.py  test_scheduling.py
calendar-sidecar/: Dockerfile  caldav_client.py  config.py  example_events.json  pyproject.toml  renderer.py  requirements.txt  server.py
calendar-sidecar/templates/: admin.html
calendar-sidecar/tests/: test_renderer.py
